tdf#150845 fix crash in writer Form->TextObject

regression from
    commit 8611f6e259b807b4f19c8dc0eab86ca648891ce3
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu May 27 10:27:46 2021 +0200
    ref-count SdrObject

Change-Id: I66370566562a1275c21c24523a505704508d3d09
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139703
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>